--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,58 @@
     box-shadow: 0 8px 6px -6px black;
     background-color: #343a40;
 }
+/* LOGIN */
+.container {
+    margin-top: 5rem;
+    width: 40%;
+}
+
+#enviarYErrores{
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#enviar{
+    flex: 0 50% 50%;
+    justify-content: center;
+}
+
+#errores{
+    list-style: none;
+}
+
+.oculto{
+    display: none;
+}
+.error-input{
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    /* border: 1px solid #ced4da; */
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+    border: 2px solid red;
+}
+.error-texto{
+    color: red;
+    list-style: none;
+}
+
+ul{
+    margin-top: 1.5rem;
+}
+
+/* REGISTRO */
+
+#esExito, h2{
+    color: green;
+}
+
