--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,55 @@
+/* FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Ubuntu:wght@300&display=swap');
+/*
+font-family: 'Pacifico', cursive;
+font-family: 'Ubuntu', sans-serif;
+*/
+body{
+    font-family: 'Ubuntu', sans-serif;
+
+}
+
+.landing{
+    background-image: url(../images/fondo.jpg);
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
 
 
 #titulo-lading{
     width: 100%;
+    align-items: flex-start;
     text-align: center;
-    text-shadow: 0px 0px 12px #ffffff;
-    padding-top: 10rem;
+    text-shadow: 0px 0px 8px #000000;
+    padding-top: 13rem;
     padding-bottom: 5rem;
     font-weight: bold;
-    color: #343a40;
+    color: #ffffff;
+    font-family: 'Pacifico', cursive;
+    font-style:italic;
+    letter-spacing:1.2rem;
+    font-size:7rem;
+
+        animation-duration: 2s;
+        animation-name: caida-titulo;
 }
 
+@keyframes caida-titulo {
+    from {
+        margin-left: 100%;
+        width: 300%
+      }
+    
+      to {
+        margin-left: 0%;
+        width: 100%;
+      }
+}
+
+
 .landing div{
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 
@@ -24,10 +62,21 @@
 
 }
 
+
+/* BOTONES LANDING */
 .landing div div button{
     box-shadow: 0 8px 6px -6px black;
-    background-color: #343a40;
+    color: black;
+    background-color: #ffffff;
 }
+.landing div div button:hover{
+    
+    background-color: #000000b2;
+
+}
+
+
+
 /* LOGIN */
 .container {
     margin-top: 5rem;
