--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body{
     margin: 0 auto;
 }
 
-#titulo-login{
+h1{
    text-align: center;
    margin-top: 5rem;
 }
@@ -127,6 +127,12 @@ margin-top: 1rem;
 .form-group small{
     color: #cacaca;
     font-style:italic;
+}
+
+#enviar p a {
+    color: #ffffff;
+    font-weight: bold;
+    text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.445);
 }
 
 
@@ -181,3 +187,15 @@ ul{
     color: green;
 }
 
+#btn-registrarse{
+    
+align-self: flex-end;
+margin-right: 3rem;
+margin-top: 1rem;
+}
+
+#btn-registrarse:hover{
+    color: #ffffff;
+    background-color: #000000b2;
+
+}
