Modificación de Div´s y enlace de scripts
Se modificaron los divs de los errores que salen al iniciar sesión/registrarse y se vinculo el JS de siLogin

--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,8 @@ margin-top: 1rem;
 
     border: 2px solid red;
 }
+
+/*Texto que sale con un error*/
 .error-texto{
     color: red;
     list-style: none;
