--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ margin-top: 1rem;
 .oculto{
     display: none;
 }
+
 .error-input{
     display: block;
     width: 100%;
@@ -185,8 +186,17 @@ ul{
 
 /* REGISTRO */
 
-#esExito, h2{
-    color: green;
+#esExito{
+    background-color:  #5a5a5abe; 
+    width: 60%;
+    margin-top: 5rem;
+}
+
+#esExito h2{
+    color: #ffffff;
+    text-shadow: 1px 1px 1px rgb(95, 95, 95);
+    padding: 5rem 0;
+    text-align: center;
 }
 
 #btn-registrarse{
