--- a/css/style.css
+++ b/css/style.css
@@ -258,3 +258,28 @@ a:hover {
 #contenido{
     text-align: center;
 }
+
+
+/*MEDIA QUERIES*/
+@media (max-width:950px){
+    #titulo-lading{
+        font-size: 3rem;
+    }
+    
+    .btn-group-lg>.btn, .btn-lg {
+    font-size: 1rem;
+
+}
+}
+
+@media (max-width:500px){
+    #titulo-lading{
+        font-size: 1.8rem;
+    }
+}
+
+@media (max-width:650px){
+    .landing div {
+        justify-content: space-evenly;
+    }
+}
