--- a/css/style.css
+++ b/css/style.css
@@ -268,18 +268,47 @@ a:hover {
     
     .btn-group-lg>.btn, .btn-lg {
     font-size: 1rem;
-
 }
+
+.contenedor-login{
+    width: 85%;
+}
+
 }
 
 @media (max-width:500px){
     #titulo-lading{
         font-size: 1.8rem;
     }
+    .contenedor-login h1{
+        font-size: 1.8rem;
+        margin-top: 3rem;
+        padding-top: 1rem;
+    }
+    th{
+        font-size: 0.8rem;
+    }
 }
 
 @media (max-width:650px){
     .landing div {
         justify-content: space-evenly;
+    }
+
+    .error-texto{
+        font-size: 0.8rem;
+    }
+
+    .oculto{
+        font-size: 1.3rem;
+    }
+    .landing{
+        
+    overflow: scroll;
+    }
+}
+@media (max-width:400px){
+    #titulo-lading{
+        font-size: 1.3rem;
     }
 }
